fix for z-index issue in import screens

--- a/app/themes/default/css/newui.css
+++ b/app/themes/default/css/newui.css
@@ -5800,6 +5800,7 @@ body > .ui-autocomplete {
   position: relative;
   height: 40px;
   display: block;
+  z-index: 0;
 }
 .float-bar .view-toolbar-container {
   z-index: 222222;
